# cuda_matrix_multiprication

./: CMakeLists.txt  cuda_mat_mul.cuh  memo.md  naive_mat_mul.hpp  test.cu
data_plot/: data_plot.py
src/: cuda_mat_mul.cuh  naive_mat_mul.hpp  test.cu
